Further dark mode fixes: talbe tweaks to prevent override

--- a/themes/dark-theme.css
+++ b/themes/dark-theme.css
@@ -70,7 +70,7 @@ h3, h4, h5, h6, #toctitle,
   color: var(--fg-inverse);
 }
 #header .details {
-  color: var(--fg-inverse);
+  color: var(--fg-muted);
 }
 
 /* Links */
@@ -144,21 +144,34 @@ table {
   border-color: var(--border);
 }
 
-tbody tr:nth-child(odd) {
-  background-color: var(--bg-alt);
-}
-tbody tr:nth-child(even) {
+tbody tr {
+  color: var(--fg);
   background-color: var(--bg-light);
 }
-/* AsciiDoc default extra overrides required to above */
-table thead tr th {
-  color: var(--fg-muted);
-  background-color: var(--border);
+
+.tableblock th {
+  border: 1px solid var(--border);
+  background-color: var(--table-head-bg);
+  color: var(--table-head-fg);
 }
+
+/* AsciiDoc default extra overrides required to above */
 table tr td {
   color: var(--fg);
 }
+/* Table headers */
+.tableblock thead th {
+  background-color: var(--border);
+  color: var(--table-head-fg);
+  font-weight: 600;
+}
 
+/* Table divider lines */
+/* Normal table cells */
+.tableblock td {
+  border: 1px solid var(--border);
+  color: var(--fg);
+}
 
 /* Admonitions */
 .admonitionblock {
@@ -229,13 +242,7 @@ table > caption,
 caption {
   color: var(--caption) !important;
   background: transparent !important;
-  border: none !important;
-  padding: 0;
-  margin: 0 0 0.5em 0;
-  font-weight: 400;
-  font-size: 0.95em;
 }
-
 
 /* (Block)quotes */
 .quoteblock blockquote,
